# slowquery-detective

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  WHY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_detective.py  report.md
docs/: ARCHITECTURE.md  DEMO.md
docs/specs/: 00-fingerprint.md  01-buffer.md  02-hooks.md  03-rules.md  04-explainer.md  05-middleware.md  06-explain-worker.md
scripts/: dev.sh  set-secrets.sh
src/slowquery_detective/: __init__.py  buffer.py  dashboard.py  explain.py  fingerprint.py  hooks.py  llm_explainer.py  middleware.py  store.py
src/slowquery_detective/rules/: __init__.py  base.py  function_in_where.py  missing_fk_index.py  n_plus_one.py  select_star.py  seq_scan.py  sort_without_index.py
tests/: test_smoke.py
tests/fixtures/: plans.py
tests/integration/: conftest.py  test_explain_worker.py  test_hooks.py  test_middleware.py
tests/unit/: test_buffer.py  test_coverage_gaps.py  test_dashboard_coverage.py  test_explain_coverage.py  test_explain_worker.py  test_fingerprint.py  test_hooks.py  test_hooks_coverage.py  test_llm_explainer.py  test_middleware.py  test_middleware_coverage.py  test_rules.py  test_store_coverage.py
