[project]
name = "slowquery-detective"
version = "0.1.0"
description = "Drop-in FastAPI + SQLAlchemy middleware that fingerprints slow Postgres queries, runs EXPLAIN asynchronously, and suggests indexes via a rules engine with LLM fallback."
readme = "README.md"
authors = [
    { name = "Abdul-Muizz Anwar", email = "abdulmuizz1310@outlook.com" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = [
    "fastapi",
    "sqlalchemy",
    "postgres",
    "slow-query",
    "explain",
    "index-suggestion",
    "observability",
    "middleware",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlglot>=25.27",
    "structlog>=24.4",
]

[project.urls]
Homepage = "https://github.com/Abdul-Muizz1310/slowquery-detective"
Repository = "https://github.com/Abdul-Muizz1310/slowquery-detective"
Issues = "https://github.com/Abdul-Muizz1310/slowquery-detective/issues"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115",
    "starlette>=0.41",
]
llm = [
    "openai>=1.40",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asyncpg>=0.30",
    "hypothesis>=6.115",
    "mypy>=1.13",
    "polyfactory>=2.18",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "testcontainers[postgres]>=4.8",
    "vcrpy>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["slowquery_detective"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: slow end-to-end tests (CI-only)",
    "integration: requires Testcontainers / real Postgres",
]
